<resources>
    <string name="app_name">"Chant \&amp; Hear"</string>
    <string name="navigation_open">"Navigation View"</string>

    <string name="navigation_close">"Navigation View Closed"</string>
    <string name="default_web_client_id" translatable="false">978073891811-uhcnqmbtgr5k4270r15onun1rtnidrd6.apps.googleusercontent.com</string>
    <string name="welcome_message">Hare Krishna Welcome to\nChant and Hear App.\nPlease sign up to experience and enhance your chanting.</string>
    <string name="welcome_sp_quote">By Srila Prabhupada\n\"The name Krishna and the Supreme Person Krishna are non-different.\"\nTherefore, if one concentrates his mind on hearing and chanting Hare Krishan, The Same Result is Achieved.</string>
    <string name="google_icon">Google Icon</string>
    <string name="sign_up_using_google">Sign up using Google</string>
    <string name="shila_prabhupada_welcome_image">Shila Prabhupada Welcome Image</string>
    <string name="iskcon_bangalore_logo">Iskcon Bangalore Logo</string>
    <string name="main_activity_hk_maha_mantra">Hare Krishna Hare Krishna\nKrishna Krishna Hare Hare\nHare Rama Hare Rama\nRama Rama Hare Hare</string>
    <string name="mindful_japa">Mindful Japa</string>
    <string name="immerse_into_the_transcental_vibration">Immerse Into the Transcendental Vibration</string>
    <string name="main_activity_tap_to_start_your_mala_hare_krishna">Tap to start / resume your mala.\n Hare Krishna</string>
    <string name="main_activity_pancha_tattva_mantra">Jaya sri-krishna-chaitanya\nprabhu nityananda\nsri-adwaita gadadhara\nshrivasadi gaura-bhakta-vrinda</string>
    <string name="soul_full_japa">Soul full japa</string>
    <string name="heart_full_japa">Heart full japa</string>
    <string name="level">Level</string>
    <string name="heard_button">Heard button</string>
    <string name="milestone_wise_heard_count">Milestone wise heard count</string>
    <string name="star">Star</string>
    <string name="chanting_guide"><u>Chanting Guide</u></string>
    <string name="chanting_guide_1_title">Always look at the App</string>
    <string name="chanting_guide_1_description">Don\'t close your eyes while chanting, keep your eyes open and chant. This helps you to perform Mindful Japa very effectively by keeping your focus locked.</string>
    <string name="chanting_guide_2_title">Consciously Increase Level</string>
    <string name="chanting_guide_2_description">After every milestone completion i.e. multiples of 16 beads, we should increase the hearing level from current plus one number.</string>
    <string name="chanting_guide_3_title">Monitor Hearing and Chanting Count</string>
    <string name="chanting_guide_3_description">Keep monitoring your chanting count v/s hearing count, difference between them should not be more than five beads.</string>
    <string-array name="playback_speed_options">
        <item>0.75x</item>
        <item>1.0x</item>
        <item>1.25x</item>
        <item>1.5x</item>
    </string-array>
    <string-array name="adding">
        <item>+5</item>
        <item>+4</item>
        <item>+3</item>
        <item>+2</item>
    </string-array>
</resources>
