<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/user_attention_chat_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:shadowColor="@color/ch_light_color"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="@string/chanting_guide"
            android:textColor="@color/ch_dark_color"
            android:textSize="24dp" />

        <com.gouravkhunger.accolib.widget.Accordion
            android:id="@+id/accordion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/chanting_guide_1_description"
            app:textColor="@color/summary_progress_header"
            app:textSize="6dp"
            app:title="@string/chanting_guide_1_title"
            app:titleColor="@color/ch_dark_color"
            app:titleSize="7dp" />

        <com.gouravkhunger.accolib.widget.Accordion
            android:id="@+id/accordion2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:text="@string/chanting_guide_2_description"
            app:textColor="@color/summary_progress_header"
            app:textSize="6dp"
            app:title="@string/chanting_guide_2_title"
            app:titleColor="@color/ch_dark_color"
            app:titleSize="7dp" />

        <com.gouravkhunger.accolib.widget.Accordion
            android:id="@+id/accordion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/chanting_guide_3_description"
            app:textColor="@color/summary_progress_header"
            app:textSize="6dp"
            app:title="@string/chanting_guide_3_title"
            app:titleColor="@color/ch_dark_color"
            app:titleSize="7dp" />

        <Button
            android:id="@+id/acceptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/level_increase_button_bg"
            android:clickable="true"
            android:padding="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="I will follow, lets start"
            android:textAllCaps="false"
            android:textColor="@color/ch_light_color"
            android:textSize="17dp" />

    </LinearLayout>
</RelativeLayout>