<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/ch_background_light_3"
    android:gravity="center"
    android:orientation="@integer/linearlayoutOrientation"
    android:paddingTop="@dimen/login_activity_layout_padding_top">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/spWelcomeImage"
            android:layout_width="453dp"
            android:layout_height="361dp"
            android:contentDescription="@string/shila_prabhupada_welcome_image"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
            app:srcCompat="@drawable/srila_prabhupada_welcome_image_lbg"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:background="#F1E8EB"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
            android:textColor="#000186"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_margin="@dimen/_15sdp"
            android:background="@color/ch_counter_border_dark" />

        <TextView
            android:id="@+id/spQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:background="#F1E8EB"
            android:text="@string/welcome_sp_quote"
            android:textColor="#57814B"
            android:textSize="15sp"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/loginButtonLL"
            android:layout_width="wrap_content"
            android:layout_height="63sp"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            android:background="@drawable/welcome_button_drawable"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/googleIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:contentDescription="@string/google_icon"
                android:padding="10sp"
                app:srcCompat="@drawable/google_icon_lg"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20sp"
                android:background="@drawable/welcome_button_drawable"
                android:gravity="center"
                android:text="@string/sign_up_using_google"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>